macro (add_ctest test_name)
    #TODO: What is  TOPTFLAGS?
    add_executable (${test_name} ${test_name}.c)
    #includes should be covered by both targets
    target_link_libraries (${test_name}
        PRIVATE
        $<TARGET_OBJECTS:validation_objects>
        papi
        testlib)

endmacro (add_ctest test_name)

#TODO: A lot of logic to add to switch on/off tests depending on options (mpi profile serial thread)

add_ctest(all_events)
add_ctest(all_native_events)
add_ctest(attach2)
add_ctest(attach3)
add_ctest(attach_cpu)
add_ctest(attach_cpu_sys_validate)
add_ctest(attach_cpu_validate)
add_ctest(attach_target)
add_ctest(attach_validate)
add_ctest(branches)
add_ctest(burn)
add_ctest(byte_profile)
add_ctest(calibrate)
add_ctest(case1)
add_ctest(case2)
add_ctest(child_overflow)
add_ctest(clockres_pthreads)
add_ctest(cmpinfo)
add_ctest(code2name)
add_ctest(data_range)
add_ctest(derived)
add_ctest(describe)
add_ctest(destroy)
add_ctest(disable_component)
add_ctest(dmem_info)
add_ctest(earprofile)
add_ctest(eventname)
add_ctest(exec2)
add_ctest(exec)
add_ctest(exec_overflow)
add_ctest(exeinfo)
add_ctest(failed_events)
add_ctest(filter_helgrind)
add_ctest(first)
add_ctest(fork2)
add_ctest(fork)
add_ctest(forkexec2)
add_ctest(forkexec3)
add_ctest(forkexec4)
add_ctest(forkexec)
add_ctest(fork_overflow)
add_ctest(get_event_component)
add_ctest(hwinfo)
add_ctest(inherit)
add_ctest(johnmay2)
add_ctest(krentel_pthreads)
add_ctest(krentel_pthreads_race)
add_ctest(kufrin)
# TODO: Duplicated target with examples/locks_pthreads, one has to change its name
#add_ctest(locks_pthreads)
add_ctest(low-level)
add_ctest(max_multiplex)
add_ctest(memory)
add_ctest(mendes-alt)
add_ctest(mpifirst)
add_ctest(mpi_hl)
add_ctest(mpi_omp_hl)
add_ctest(multiattach2)
add_ctest(multiattach)
add_ctest(multiplex1)
add_ctest(multiplex1_pthreads)
add_ctest(multiplex2)
add_ctest(multiplex3_pthreads)
add_ctest(native)
add_ctest(nineth)
add_ctest(omp_hl)
add_ctest(omptough)
add_ctest(overflow2)
add_ctest(overflow3_pthreads)
add_ctest(overflow_allcounters)
add_ctest(overflow)
add_ctest(overflow_force_software)
add_ctest(overflow_index)
add_ctest(overflow_one_and_read)
# Duplicate...
#add_ctest(overflow_pthreads)
add_ctest(overflow_single_event)
add_ctest(overflow_twoevents)
add_ctest(overflow_values)
add_ctest(p4_lst_ins)
add_ctest(pernode)
add_ctest(profile)
add_ctest(profile_pthreads)
add_ctest(profile_twoevents)
add_ctest(prof_utils)
add_ctest(pthread_hl)
add_ctest(pthrtough2)
add_ctest(pthrtough)
add_ctest(realtime)
add_ctest(remove_events)
add_ctest(reset)
add_ctest(reset_multiplex)
add_ctest(sdsc2)
add_ctest(sdsc4-mpx)
add_ctest(sdsc-mpx)
add_ctest(second)
add_ctest(serial_hl)
add_ctest(serial_hl_ll_comb)
add_ctest(shlib)
# TODO: Duplicated...
#add_ctest(sprofile)
add_ctest(system_child_overflow)
add_ctest(system_overflow)
add_ctest(tenth)
add_ctest(thrspecific)
add_ctest(timer_overflow)
add_ctest(val_omp)
add_ctest(version)
add_ctest(virttime)
add_ctest(zero_attach)
add_ctest(zero)
add_ctest(zero_flip)
add_ctest(zero_fork)
add_ctest(zero_named)
add_ctest(zero_omp)
add_ctest(zero_pthreads)
add_ctest(zero_shmem)
add_ctest(zero_smp)

